--- a/css/style.css
+++ b/css/style.css
@@ -91,68 +91,47 @@ a{
 }
 
 .card img{
-    max-width:100%;
- }
- 
- .card .swiper-slide h1{
-     padding:10px 0;
- }
- .card .swiper-slide p{
-     padding-bottom: 30px;
- }
- 
- #section_1{
-     width:1320px;
-     margin:0px auto;
-     position: relative;
-     
- }
- .card{
-     padding:220px 0;
-     /*가운데 이미지의 높이에 따라 아래 위 패딩 조정해주세요!*/
- }
- 
- 
- /* .swiper-button-prev {
-     left: -50px;
-     right: auto;
- }
- 
- .swiper-button-next{
-     right: -50px;
-     left: auto;
- } */
-
- /*높이가 다른 슬라이드들을 세로 가운데가 맞게 해줌*/
- .card .swiper-wrapper{
-     align-items: center;
+    width:100%;
+    border-radius: 40px;
 }
 
- /*지금 현재 가운데 보이고 있는 슬라이드는 .swiper-slide-active 라는 클래스를 가지는데 이를 이용해 스타일을 꾸며줌. */
 .card .swiper-slide{
-     background-color: #fff;
-     transform: scale(0.5);
-     flex-shrink: 0;
-     border-radius: 40px;
-     overflow: hidden;
+    box-sizing: border-box;
 }
 
- .card .swiper-slide-prev{
-     transform: scale(1.5);
-     z-index: 5;
-     filter: blur(5px);
+#section_1{
+    width:100%;
+    margin:100px auto;
+    position: relative;
+    align-content: center;
 }
 
- .card .swiper-slide-next{
-     transform: scale(1.5);
-     z-index: 5;
-     filter: blur(5px);
+/* .swiper-button-prev {
+    left: -50px;
+    right: auto;
 }
 
- .card .swiper-slide-active{
-    transform: scale(2);
+.swiper-button-next{
+    right: -50px;
+    left: auto;
+} */
+
+/*지금 현재 가운데 보이고 있는 슬라이드는 .swiper-slide-active 라는 클래스를 가지는데 이를 이용해 스타일을 꾸며줌. */
+.card .swiper-slide{
+    opacity:0.3;
+    transition: all 0.5s;
+}
+.card .swiper-slide-active{
+    opacity:1;
+    transition: all 0.5s;
+    
+}
+
+/*불릿모양. swiper-pagination-bullet-active 클래스가 현재 색상이 들어간 부분 나타냄*/
+.swiper-pagination-bullet-active{
+    width:30px;
+    border-radius: 40px;
     z-index: 10;
-    transition: all 0.3s;
 }
 
 .text{
@@ -182,7 +161,7 @@ a{
 
 .text_inner>p{
     display: inline-block;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 64px;
     padding-right: 20px;
 }
@@ -214,7 +193,7 @@ a{
 
 .text_inner_2>p{
     display: inline-block;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 64px;
     padding-right: 20px;
 }
@@ -592,7 +571,7 @@ a{
     width: 200px;
     height: 200px;
     box-sizing: border-box;
-    border-radius: 50%;
+    border-radius: 40px;
     justify-content: center;
     align-content: center;
     transition: all 0.3s;
@@ -617,7 +596,7 @@ a{
 }
 
 .icon>li:hover .icon_box{
-    border-radius: 0%;
+    border-radius: 50%;
     transition: all 0.3s;
 }
 
