--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,26 @@ a{
     color: #00bdc4;
 }
 
+@media(max-width:1100px){
+    #header_wrap{
+        width: 100%;
+    }
+
+    .header{
+        width: 90%;
+    }
+
+    .gnb>li>a{
+        font-size: 18px;
+    }
+}
+
+@media(max-width:700px){
+    .gnb>li{
+        width: 100%;
+    }
+}
+
 
 /* 메인 배너 영상 */
 #main_banner_wrap{
@@ -82,11 +102,28 @@ a{
     text-align: center;
 }
 
+.main_banner>video{
+    max-width: 100%;
+}
+
+@media(max-width:1100px){
+    #main_bannerMwrap{
+        width: 100%;
+    }
+
+    .main_banner{
+        width: 100%;
+    }
+
+    video{
+        width: 100%;
+    }
+}
+
 
 /* 1번째 레이아웃 */
 #section_1_wrap{
     height: 1080px;
-    padding: 80px 0px;
     box-sizing: border-box;
 }
 
@@ -202,6 +239,21 @@ a{
     color: #45F9FF;
 }
 
+@media(max-width:1100px){
+    .text_inner>p{
+        font-size: 40px;
+    }
+
+    .text_inner_2>p{
+        font-size: 40px;
+    }
+
+    .content_wrap{
+        width: 100%;
+        height: 300px;
+    }
+}
+
 
 
 /* 2번째 레이아웃 */
@@ -253,6 +305,28 @@ a{
     background-color: #000;
     color: #45F9FF;
     box-shadow: 0px 0px 15px 5px #45F9FF;
+}
+
+@media(max-width:1100px){
+    .section_2{
+        width: 100%;
+    }
+
+    .main_text{
+        font-size: 48px;
+    }
+
+    .sub_text{
+        font-size: 60px;
+    }
+
+    .bth{
+        width: 200px;
+        height: 60px;
+        box-sizing: border-box;
+        font-size: 20px;
+        padding: 18px 0px;
+    }
 }
 
 
@@ -326,6 +400,51 @@ a{
     font-size: 24px;
     font-weight: 500;
     font-family: 'Pretendard';
+}
+
+@media(max-width:1100px){
+    .section_3{
+        width: 100%;
+    }
+
+    .h1_text{
+        font-size: 48px;
+    }
+
+    .intro{
+        font-size: 32px;
+        font-family: 'Pretendard';
+        padding-bottom: 30px;
+    }
+
+    .post{
+        font-size: 20px;
+        font-family: 'Pretendard';
+        padding-bottom: 120px;
+    }
+
+    .process>li>p{
+        font-size: 18px;
+    }
+
+    .process{
+        justify-content: space-around;
+        gap: 10px;
+    }
+
+    .process>li{
+        width: 60%;
+        margin-bottom: 10px;
+    }
+
+    .box{
+        width: 150px;
+        height: 150px;
+    }
+
+    .box>img{
+        width: 100%;
+    }
 }
 
 
@@ -418,8 +537,7 @@ a{
 
 .inner>ul>li>img{
     display: block;
-    width: 420px;
-    height: 560px;
+    width: 100%;
 }
 
 .hover_effect{
@@ -471,6 +589,140 @@ a{
     transition:all 0.5s;
     justify-content: center;
     color: #ffffffc5;
+}
+
+@media(max-width:1100px){
+    .section_4{
+        width: 100%;
+    }
+
+    .intro_2{
+    font-size: 32px;
+    font-family: 'Pretendard';
+    padding: 100px 0px 30px 0px;
+    color: #fff;
+    }
+
+    .post_2{
+    font-size: 20px;
+    font-family: 'Pretendard';
+    color: #fff;
+    }
+
+    /* 흘려가는 이미지 효과 */
+    #slide_box{
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+    }
+
+    /*width를 본인에 맞게 수정하여 사용하세요! --아래 3개*/
+    .inner{
+        width: 6800px;
+        /*ul길이의 두배!*/
+        display: flex;
+        animation: rotate 35s linear infinite;
+        padding: 60px 0px;
+    }
+
+    .inner>ul{
+        display: flex;
+        width: 3400px;
+        /*li크기를 전부합한것보다 더 여유있게.*/
+        justify-content: space-around;
+    }
+
+    .inner:hover {
+        animation-play-state: paused;
+    }
+
+    /* .inner>ul>li:hover{
+        box-shadow: 0px 0px 30px #45F9FF;
+    } */
+
+    /*슬라이드에 호버시 애니메이션이 멈추게 만듦*/
+
+    @keyframes rotate {
+        0% {
+            margin-left: 0;
+        }
+
+        100% {
+            margin-left: -3400px;
+            /*slide_inner의 ul길이와 동일하게 - 설정합니다!*/
+        }
+    }
+
+
+    /* 호버시 나타나는 효과 */
+    .inner>ul>li{
+        position: relative;
+    }
+
+    .inner>ul>li{
+        width: 360px;
+        height: 480px;
+        box-sizing: border-box;
+        border-radius: 40px;
+        overflow: hidden;
+    }
+
+    .inner>ul>li>img{
+        display: block;
+        width: 100%;
+    }
+
+    .hover_effect{
+        position: absolute;
+        top:0;
+        left:0;
+        background:rgba(0,0,0,0.8);
+        width:360px;
+        height:480px;
+        box-sizing: border-box;
+        text-align: center;
+        opacity: 0;
+        transition:all 0.5s;
+    }
+
+    .inner>ul>li:hover .hover_effect{
+        opacity:1;
+    }
+
+    .inner>ul>li:hover .en_name{
+        top: 80px;
+    }
+
+    .inner>ul>li:hover .ko_name{
+        bottom: 80px;
+    }
+
+    .en_name{
+        position:absolute;
+        top:-80px;
+        left: 50%;
+        transform: translate(-50%);
+        font-size: 32px;
+        font-weight: bold;
+        font-family: 'Pretendard';
+        transition:all 0.5s;
+        justify-content: center;
+        color: #45F9FFc5;
+    }
+
+    .ko_name{
+        position:absolute;
+        bottom:-80px;
+        left: 50%;
+        transform: translate(-50%);
+        font-size: 24px;
+        font-weight: bold;
+        font-family: 'Pretendard';
+        transition:all 0.5s;
+        justify-content: center;
+        color: #ffffffc5;
+    }    
+
 }
 
 
@@ -540,6 +792,57 @@ a{
     font-size: 20px;
 }
 
+@media(max-width:1100px){
+    .section_5{
+        width: 100%;
+    }
+
+    .intro_3{
+        font-size: 32px;
+        font-family: 'Pretendard';
+        padding-bottom: 80px;
+    }
+
+    .information_3{
+        justify-content: center;
+        gap: 30px;
+    }
+
+    .information_3>li{
+        width: 100%;
+        height: 100%;
+    }
+
+    .information_3>li>img{
+        width: 100%;
+    }
+
+    .information_3>li:hover .down_box{
+        top: 40px;
+    }
+
+    .down_box{
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        z-index: -2;
+        border-radius: 40px;
+        width: 100%;
+        height: 100%;
+    }
+
+    .down_box>p{
+        position: relative;
+        bottom: -90%;
+        font-size: 18px;
+    }
+
+    .down_box>.one_media{
+        font-size: 16px;
+    }
+
+
+}
 
 /* 6번째 레이아웃 */
 #section_6_wrap{
@@ -598,6 +901,47 @@ a{
 .icon>li:hover .icon_box{
     border-radius: 50%;
     transition: all 0.3s;
+}
+
+@media(max-width:1100px){
+    .section_6{
+        margin: 0 auto;
+        width: 90%;
+    }
+
+    .intro_4{
+        font-size: 32px;
+        font-family: 'Pretendard';
+        padding: 100px 0px;
+        color: #fff;
+    }
+
+    .icon{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 90%;
+        margin: 0 auto;
+        gap: 90px;
+    }
+
+    .icon_box{
+        width: 150px;
+        height: 150px;
+    }
+
+    .icon_box>img{
+        width: 60%;
+    }
+
+    .icon>li>p{
+        color: #fff;
+        font-size: 18px;
+        font-family: 'Pretendard';
+        font-weight: 400;
+        padding-top: 12px;
+    }
+
 }
 
 
@@ -797,6 +1141,169 @@ a{
     opacity:1;
 }
 
+@media(max-width:1100px){
+    .section_7{
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .intro_5{
+        font-size: 32px;
+        font-family: 'Pretendard';
+        padding: 100px 0px;
+    }
+
+    .inner_2{
+        width: 4800px;
+        /*ul길이의 두배!*/
+        display: flex;
+        animation: rotate 35s linear infinite;
+    }
+
+    .inner_2>ul{
+        display: flex;
+        width: 2400px;
+        /*li크기를 전부합한것보다 더 여유있게.*/
+        justify-content: space-around;
+    }
+
+    .inner_2:hover {
+        animation-play-state: paused;
+    }
+
+    /* .inner>ul>li:hover{
+        box-shadow: 0px 0px 30px #45F9FF;
+    } */
+
+    /*슬라이드에 호버시 애니메이션이 멈추게 만듦*/
+
+    @keyframes rotate {
+        0% {
+            margin-left: 0;
+        }
+
+        100% {
+            margin-left: -2400px;
+            /*slide_inner의 ul길이와 동일하게 - 설정합니다!*/
+        }
+    }
+    .inner_3{
+        width: 4800px;
+        /*ul길이의 두배!*/
+        display: flex;
+        animation: rotate_2 35s linear infinite;
+    }
+
+    .inner_3>ul{
+        display: flex;
+        width: 2400px;
+        /*li크기를 전부합한것보다 더 여유있게.*/
+        justify-content: space-around;
+    }
+
+    .inner_3:hover {
+        animation-play-state: paused;
+    }
+
+    /* .inner>ul>li:hover{
+        box-shadow: 0px 0px 30px #45F9FF;
+    } */
+
+    /*슬라이드에 호버시 애니메이션이 멈추게 만듦*/
+
+    @keyframes rotate_2 {
+    100% {
+        margin-left: 0px;
+    }
+
+    0% {
+        margin-left: -2400px;
+        /*slide_inner의 ul길이와 동일하게 - 설정합니다!*/
+    }
+}
+
+    .hover_effect_3>p{
+        font-size: 26px;
+        color: #fff;
+        font-weight: 500;
+        font-family: 'Pretendard';
+    }
+
+    .hover_effect_2>p{
+        font-size: 26px;
+        color: #fff;
+        font-weight: 500;
+        font-family: 'Pretendard';
+    }
+
+    #slide_2_box{
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        padding-bottom: 40px;
+    }
+
+    #slide_3_box{
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+
+    }
+
+    .inner_2>ul>li{
+        width: 560px;
+        height: 300px;
+        box-sizing: border-box;
+        border-radius: 40px;
+        overflow: hidden;
+    }
+
+    .inner_2>ul>li>img{
+        width: 100%;
+    }
+
+    .hover_effect_2{
+        position: absolute;
+        top:0;
+        left:0;
+        background:rgba(0,0,0,0.7);
+        width:560px;
+        height:300px;
+        box-sizing: border-box;
+        text-align: center;
+        align-content: center;
+        opacity: 0;
+        transition:all 0.5s;
+    }
+
+    .hover_effect_3{
+        position: absolute;
+        top:0;
+        left:0;
+        background:rgba(0,0,0,0.7);
+        width:560px;
+        height:300px;
+        box-sizing: border-box;
+        text-align: center;
+        align-content: center;
+        opacity: 0;
+        transition:all 0.5s;
+    }
+
+    .inner_3>ul>li{
+        width: 560px;
+        height: 300px;
+        box-sizing: border-box;
+        border-radius: 40px;
+        overflow: hidden;
+    }
+
+    .inner_3>ul>li>img{
+        width: 100%;
+    }
+}
+
 
 /* 8번째 레이아웃 */
 #section_8_wrap{
@@ -866,6 +1373,61 @@ a{
 .community>li:hover .effect_2{
     transition: all 0.5s;
     opacity: 1;
+}
+
+@media(max-width:1100px){
+    .section_8{
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .section_8>.h1_text{
+        color: #fff;
+        font-size: 48px;
+        font-weight: bold;
+        font-family: 'SBAggroB';
+    }
+
+    .community{
+        margin-top: 40px;
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin: 0 auto;
+        margin-bottom: 180px;
+    }
+
+    .community>li{
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        border-radius: 40px;
+        overflow: hidden;
+        position: relative;
+        transition: all 0.5s;
+    }
+
+    .effect_2{
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0,0,0,0.7);
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: all 0.5s;
+        box-sizing: border-box;
+        align-content: center;
+    }
+
+    .effect_2>p{
+        color: #45F9FF;
+        font-size: 24px;
+        font-weight: bold;
+    }
+
+
+
 }
 
 
@@ -966,6 +1528,46 @@ a{
 
 .plus img{
 	transition:transform 0.5s;
+}
+
+@media(max-width:1100px){
+    .section_9{
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .section_9>.h1_text{
+        font-size: 48px;
+        font-weight: bold;
+        font-family: 'SBAggroB';
+        padding-bottom: 40px;
+    }
+
+    #menu{
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .tabs>li>span{
+        display: block;
+        cursor: pointer;
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
+        font-family: 'Pretendard';
+        width: 100px;
+        height: 28px;
+        box-sizing: border-box;
+    }
+
+    .text_info{
+        text-align: left;
+        display:none;
+        font-size: 16px;
+        padding-left: 40px;
+        margin-bottom: 20px;
+    }
+
 }
 
 
@@ -1070,6 +1672,98 @@ a{
     background-color: #45F9FF;
     color: #000;
     border: none;
+}
+
+@media(max-width:1100px){
+    .footer{
+        width: 90%;
+        height: 300px;
+        margin: 0 auto;
+    }
+
+    .logo_name{
+        margin-bottom: 30px;
+}
+
+.logo_name>h2{
+    font-size: 30px;
+    font-weight: 800;
+    font-family: 'Pretendard';
+    line-height: 28px;
+}
+
+.logo_name>h2>span{
+    color: #45F9FF;
+}
+
+.logo_name>.sub_title{
+    padding-top: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    font-family: 'Pretendard';
+}
+
+.sub_title{
+    font-size: 20px;
+    font-weight: 600;
+    font-family: 'Pretendard';
+}
+
+.content{
+    margin-bottom: 10px;
+}
+
+.content>p{
+    font-weight: 300;
+    padding-bottom: 6px;
+}
+
+.Tel, .E-mail{
+    font-weight: 300;
+}
+
+.content_2{
+    display: flex;
+    height: 125px;
+    box-sizing: border-box;
+}
+
+.Tel{
+    padding-right: 30px;
+}
+
+.mid_content{
+    flex-wrap: wrap;
+    width: 300px;
+}
+
+.copyright{
+    font-size: 14px;
+    font-weight: 300;
+    align-content: center;
+    text-align: center;
+}
+
+.sns{
+    align-items: center;
+    display: flex;
+    text-align: center;
+    gap: 10px;
+}
+
+.sns>li>a{
+    display: block;
+    align-content: center;
+    width: 80px;
+    height: 80px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    border: 2px solid #45F9FF;
+    font-size: 16px;
+    font-weight: 300;
+    color: #45F9FF;
+}
+
 }
 
 /* 탑 버튼 */
